--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.3",
     "core-js": "^3.8.3",
+    "nanoid": "^3.3.4",
+    "pinia": "^2.0.14",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
